--- a/navi.html
+++ b/navi.html
@@ -33,7 +33,7 @@
 </style>
 
 <nav class="bottom-nav">
-    <a href="archive.html" data-page="archive">Archive</a>
+    <a href="index.html" data-page="archive">Archive</a>
     <a href="film.html" data-page="film">Film</a>
     <a href="trip.html" data-page="trip">Trip</a>
 </nav>
