--- a/index.html
+++ b/index.html
@@ -14,7 +14,39 @@
             href="https://fonts.googleapis.com/css2?family=Playwrite+HU:wght@100..400&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
             rel="stylesheet">
 </head>
+<style>
+    .music-toggle {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 9999;
+    background-color: rgba(255, 255, 255, 0.8);
+    color: #171717;
+    font-size: 1.2rem;
+    /* 缩小符号大小 */
+    padding: 0.4rem 0.6rem;
+    border-radius: 50%;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.music-toggle:hover {
+    transform: scale(1.05);
+    background-color: rgba(23, 247, 0, 0.8);
+    color: white;
+}
+</style>
 <body>
+    <!-- 音乐按钮和音频播放器 -->
+    <div class="music-toggle" onclick="toggleMusic()">
+        🎵
+    </div>
+    <audio id="bg-music" loop>
+        <source src="musics/bg1.m4a" type="audio/mp4" />
+        Your browser does not support the audio tag.
+    </audio>
+
     <div class="greeting_box"> 
         <p class ="greetings">
             Hello Carrie.<br>
@@ -124,5 +156,16 @@
         .then(html => {
             document.getElementById('navbar').innerHTML = html;
         });
+    const audio = document.getElementById("bg-music");
+    let isPlaying = false;
+
+    function toggleMusic() {
+        if (isPlaying) {
+            audio.pause();
+        } else {
+            audio.play();
+        }
+        isPlaying = !isPlaying;
+    }
 </script>
 </html>
